--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=OnlineSupportSystem
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:r6pKpXim/RWT6+jvR2M9gsS0m+f6m97XZiemrPNr/uk=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,14 +11,14 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=test_db
 DB_USERNAME=root
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DRIVER=local
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -28,14 +28,13 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=465
+MAIL_USERNAME=noreplyatshah@gmail.com
+MAIL_PASSWORD=$noatsha123
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_NAME=OnlineSupportSystem
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -50,7 +49,14 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-#$noatsha123
-#X4FRNMHL4Y
-#85fc30cd988ae61b453777f6b6d2e34b
-#1936b36fa9bc468487488a717d13205d
+
+ALGOLIA_APP_ID=GYVHNO6NUF
+ALGOLIA_SECRET=ac846f77107ed9d608adde3baed9dd0d
+
+MIX_ALGOLIA_APP_ID=GYVHNO6NUF
+MIX_ALGOLIA_SEARCH=8885ae1b0c51d854a7ad0ba668339acc
+
+SCOUT_QUEUE=true
+
+SESSION_DOMAIN=localhost
+SANCTUM_STATEFUL_DOMAINS=localhost
