--- a/.env.example
+++ b/.env.example
@@ -50,13 +50,11 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-ALGOLIA_APP_ID=GYVHNO6NUF
-ALGOLIA_SECRET=ac846f77107ed9d608adde3baed9dd0d
+ALGOLIA_APP_ID=
+ALGOLIA_SECRET=
 
-MIX_ALGOLIA_APP_ID=GYVHNO6NUF
-MIX_ALGOLIA_SEARCH=8885ae1b0c51d854a7ad0ba668339acc
-
-SCOUT_QUEUE=true
+MIX_ALGOLIA_APP_ID=
+MIX_ALGOLIA_SEARCH=
 
 SESSION_DOMAIN=localhost
 SANCTUM_STATEFUL_DOMAINS=localhost
